added lodging and party info! still a WIP
title

--- a/wedding_website/_includes/big-links.html
+++ b/wedding_website/_includes/big-links.html
@@ -20,12 +20,12 @@
             <div class="big-links__linktext">Travel</div>
             {% include linklist--travel.html %}
         </a></li>
+        <li><a href="/wedding-party/">
+            <div class="big-links__linktext">Wedding Party</div>
+        </a></li>
         <li><a class="disabled" {% comment %}href="/things-to-do/"{% endcomment %}>
             <div class="big-links__linktext">Things to do <span class="coming-soon">Coming Soon</span></div>
             {% comment %}{% include linklist--things.html %}{% endcomment %}
-        </a></li>
-        <li><a href="#" class="disabled">
-            <div class="big-links__linktext">Wedding Party <span class="coming-soon">Coming Soon</span></div>
         </a></li>
         <li><a href="#" class="disabled">
             <div class="big-links__linktext">Music <span class="coming-soon">Coming Soon</span></div>
