--- a/wedding_website/_includes/menu.html
+++ b/wedding_website/_includes/menu.html
@@ -21,11 +21,11 @@
         <li>
             <a href="/things-to-do/">Things to do</a>
         </li>
-
-        <li class="inactive">
-            <a>Wedding Party</a>
+{% endcomment %}
+        <li>
+            <a href="/wedding-party/">Wedding Party</a>
         </li>
-
+{% comment %}
         <li class="inactive">
             <a>Music</a>
         </li>
