--- a/wedding_website/_sass/main.scss
+++ b/wedding_website/_sass/main.scss
@@ -34,7 +34,9 @@
     --colorGrey0: #FFFFFF;
     --colorGrey25: #FAFAFA;
     --colorGrey100: #F5F5F5;
+    --colorGrey200: #EBEBEB;
     --colorGrey300: #E3E3E3;
+    --colorGrey400: #a4a4a4;
     --colorGrey500: #8E8E92;
     --colorGrey600: #404040;
     --colorGrey900: #1c1c1d;
