--- a/wedding_website/_sass/typography.scss
+++ b/wedding_website/_sass/typography.scss
@@ -4,19 +4,19 @@ body {font-family: var(--fontMain); font-weight: 500;}
 
 body, div, p, ol, ul, h1, h2, h3, h4, h5, h6 {color: var(--colorContentPrimary);}
 
-a, a:visited {color: var(--colorTerraCotta); transition: .15s all ease-in-out;
+a, a:visited {color: var(--colorGrape); transition: .15s all ease-in-out;
 
-    &:hover, &:focus {color: var(--colorContentPrimary); text-decoration-color: var(--colorTerraCotta);}
+    &:hover, &:focus {color: var(--colorContentPrimary); text-decoration-color: var(--colorGrape);}
 }
 
 ::selection {
     color: var(--colorGrey0);
-    background-color: var(--colorTerraCotta);
+    background-color: var(--colorGrape);
 }
 
 ::-moz-selection {
     color: var(--colorGrey0);
-    background-color: var(--colorTerraCotta);
+    background-color: var(--colorGrape);
   }
 
 strong, b {font-weight: 700;}
@@ -98,5 +98,9 @@ h3 {
 }
 
 .disclaimer {color: var(--colorContentSecondary); font-size: 0.75rem; text-align: center; margin-top: 4rem;}
+.fine-print {color: var(--colorContentSecondary); font-size: 0.75rem; font-style: italic; line-height: 1.5; display: block; max-width: 640px; margin-top: 2rem;}
 
+.role {color: var(--colorContentSecondary); font-size: 75%;}
 .disabled {color: var(--colorContentSecondary);}
+
+.featured-text {padding: 1rem; border-radius: 8px; outline: 2px dotted var(--colorGrape); /* outline-offset: 0.5rem; background: var(--colorGrey100); */}
