--- a/wedding_website/_layouts/page.html
+++ b/wedding_website/_layouts/page.html
@@ -35,11 +35,13 @@ layout: default
   
     {% elsif block.block_id == "hotel" %}
       <div class="hotel">
-        <h3 class="hotel-heading">{{ block.heading }}</h3>
-        <p>{{ block.content }}</p>
+        <h3 class="hotel-heading">{{ block.heading }}{% if block.role %} <span class="role">{{ block.role }}</span>{% endif %}</h3>
+        <p>{{ block.content | markdownify }}</p>
+        {% if block.featured_hotel %}<p class="featured-text">{{ block.featured_hotel }}</p>{% endif %}
         {% if block.price %}<strong class="price">{{ block.price }}</strong>{% endif %}
         {% if block.website and block.website_link %}<div><a target="_blank" href="{{ block.website_link }}">{{ block.website }}</a></div>{% endif %}
         {% if block.address %}<div class="address"><strong>{{ block.address }}</strong>{% if block.address_link %}<a href="{{ block.address_link }}" target="_blank">View on map</a>{% endif %}</div> {% endif %}
+        {% if block.fine_print %}<span class="fine-print">{{ block.fine_print }}</span>{% endif %}
       </div>
 
 
