--- a/wedding_website/_includes/menu.html
+++ b/wedding_website/_includes/menu.html
@@ -21,11 +21,9 @@
         <li>
             <a href="/things-to-do/">Things to do</a>
         </li>
-{% endcomment %}
         <li>
-            <a href="/wedding-party/">Wedding Party</a>
+            <a class="inactive" href="/wedding-party/">Wedding Party</a>
         </li>
-{% comment %}
         <li class="inactive">
             <a>Music</a>
         </li>
