--- a/wedding_website/_includes/big-links.html
+++ b/wedding_website/_includes/big-links.html
@@ -20,8 +20,9 @@
             <div class="big-links__linktext">Travel</div>
             {% include linklist--travel.html %}
         </a></li>
-        <li><a class="disabled" {% comment %} href="/wedding-party/" {% endcomment %}>
+        <li><a  href="/wedding-party/">
             <div class="big-links__linktext">Wedding Party</div>
+            {% include linklist--party.html %}
         </a></li>
         <li><a class="disabled" {% comment %}href="/things-to-do/"{% endcomment %}>
             <div class="big-links__linktext">Things to do <span class="coming-soon">Coming Soon</span></div>
