--- a/wedding_website/_sass/layout.scss
+++ b/wedding_website/_sass/layout.scss
@@ -286,6 +286,26 @@
        a {margin-left: 8px;}
       }
 
+      .photo-wrap {
+        display: flex; flex-direction: column; gap: 1rem;
+        img {width: 100%; max-width: calc(300px + 2rem); object-fit: cover; object-position: center center;}
+
+        @media (min-width: 768px) {
+          flex-direction: row; gap: 2rem;
+          img {width: 300px; height: 300px; margin-left: -6rem; margin-top: 1.5rem;}
+
+        }
+
+      } // end photo-wrap
+
+      &:nth-of-type(even) {
+        .photo-wrap {
+          @media (min-width: 768px) {
+            img {margin-left: 0; margin-right: -6rem; order: 2;}
+          }
+        }
+      }
+
     }
 
     img {
@@ -401,3 +421,4 @@
 
 hr.at {height: 1px; border-top: 1px solid var(--colorGrape); width: 100%;}
 h4.when {background: var(--colorGrey200); color: var(--colorGrape); padding: 0.25rem 0.5rem; border-radius: 4px; font-size: 0.625rem; text-transform: uppercase; width: max-content; margin: 0 auto;}
+
