Adding a bunch of new pages and monograms
Getting close to ready for invite-ations!

Quick hits:

- Gallery page + masonry.js
- Redirect to RSVP form
- wedding party page
- Jekyll_redirect plugin
-

--- a/wedding_website/_sass/themes.scss
+++ b/wedding_website/_sass/themes.scss
@@ -25,12 +25,12 @@
 
     ::selection {
         color: var(--colorGrey0);
-        background-color: var(--colorTerraCotta);
+        background-color: var(--colorGrape);
     }
     
     ::-moz-selection {
         color: var(--colorGrey0);
-        background-color: var(--colorTerraCotta);
+        background-color: var(--colorGrape);
       }
 
 
