--- a/wedding_website/_includes/head.html
+++ b/wedding_website/_includes/head.html
@@ -16,6 +16,10 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 
+  {% if page.title == "Gallery" %}
+  <!-- masonry.js -->
+  <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+  {% endif %}
   <!-- main styles -->
   <link rel="stylesheet" href="{{ "/styles.css" | relative_url }}">
   {%- feed_meta -%}
