--- a/wedding_website/_includes/menu.html
+++ b/wedding_website/_includes/menu.html
@@ -17,27 +17,20 @@
         <li>
             <a href="/travel/">Travel</a>
         </li>
-{% comment %}
         <li>
-            <a href="/things-to-do/">Things to do</a>
+            <a href="/things-to-do/">Weekend Events</a>
         </li>
-        {% endcomment %}
         <li>
             <a href="/wedding-party/">Wedding Party</a>
         </li>
-        {% comment %}
-        <li class="inactive">
-            <a>Music</a>
+
+        <li class="">
+            <a href="/rsvp/">RSVP</a>
         </li>
 
-        <li class="inactive">
-            <a>RSVP</a>
+        <li class="">
+            <a href="/registry/">Registry</a>
         </li>
-
-        <li class="inactive">
-            <a>Registry</a>
-        </li>
-{% endcomment %}
 
     </ul>
 
