--- a/wedding_website/_layouts/page.html
+++ b/wedding_website/_layouts/page.html
@@ -53,6 +53,11 @@ layout: default
           <img src="{{ block.picture }}" />
             <div class="content-wrap">
         {% endif %}
+        {% if block.subheading %}
+              {% if block.subheading.subheading_name %}<strong class="subheading-name">{{ block.subheading.subheading_name }}</strong>{% endif %}
+              {% if block.subheading.subheading_time %}<span class="subheading-place">{{ block.subheading.subheading_time }}</span>{% endif %}
+              {% if block.subheading.subheading_place %}<span class="subheading-place">{{ block.subheading.subheading_place }}</span>{% endif %}
+        {% endif %}
         <p>{{ block.content | markdownify }}</p>
         {% if block.picture %}
           </div><!-- end content-wrap -->
@@ -84,6 +89,17 @@ layout: default
         <div class="swiper-pagination"></div>
       </div>
 
+    {% elsif block.block_id == 'masonry' %}
+
+    <div class="masonry-gallery">
+      {% for image in block.images %}
+        <div class="masonry-gallery__item {% if image.span %}width__{{ image.span }}{% endif %}">
+          <img src="{{ image.image_src }}" alt="{{ image.alt }}" />
+        </div>
+      {% endfor %}
+    </div>
+
+      
     {% else %}  
 
     {% if block.heading %}
