ready for pre-rsvp push!

--- a/wedding_website/_includes/menu.html
+++ b/wedding_website/_includes/menu.html
@@ -23,6 +23,9 @@
         <li>
             <a href="/wedding-party/">Wedding Party</a>
         </li>
+        <li>
+            <a href="/gallery/">Gallery</a>
+        </li>
 
         <li class="">
             <a href="/rsvp/">RSVP</a>
