--- a/wedding_website/_includes/big-links.html
+++ b/wedding_website/_includes/big-links.html
@@ -38,8 +38,8 @@
             {% include linklist--things.html %}
         </a></li>
         <li><a href="/gallery/">
-            <div class="big-links__linktext">Gallery <span class="coming-soon">Coming Soon</span></div>
-            {% include linklist--default.html %}
+            <div class="big-links__linktext">Gallery</div>
+            {% include linklist--gallery.html %}
         </a></li>
 
 
