--- a/wedding_website/_sass/typography.scss
+++ b/wedding_website/_sass/typography.scss
@@ -63,6 +63,8 @@ h1 {
     -webkit-text-fill-color: transparent;
     display: inline-block; padding-top: 0.7rem; margin-top: -0.7rem; 
     padding-left: 1.2rem; margin-left: -1.2rem;
+
+    &.city {padding-left: 0; display: block;}
 }
 
 @keyframes gradient {
